@@ -2,11 +2,10 @@ package org.jabref.logic.exporter;
 
 import java.io.BufferedWriter;
 import java.io.IOException;
-import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -15,6 +14,7 @@ import org.jabref.logic.xmp.XmpPreferences;
 import org.jabref.logic.xmp.XmpUtilWriter;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.entry.BibEntry;
+import org.jabref.model.entry.field.InternalField;
 
 /**
  * A custom exporter to write bib entries to a .xmp file for further processing
@@ -23,7 +23,7 @@ import org.jabref.model.entry.BibEntry;
  */
 public class XmpExporter extends Exporter {
 
-    private static final String XMP_SPLIT_PATTERN = "split";
+    public static final String XMP_SPLIT_DIRECTORY_INDICATOR = "split";
 
     private final XmpPreferences xmpPreferences;
 
@@ -32,8 +32,13 @@ public class XmpExporter extends Exporter {
         this.xmpPreferences = xmpPreferences;
     }
 
+    /**
+     * @param databaseContext the database to export from
+     * @param file            the file to write to. If it contains "split", then the output is split into different files
+     * @param entries         a list containing all entries that should be exported
+     */
     @Override
-    public void export(BibDatabaseContext databaseContext, Path file, Charset encoding, List<BibEntry> entries) throws Exception {
+    public void export(BibDatabaseContext databaseContext, Path file, List<BibEntry> entries) throws Exception {
         Objects.requireNonNull(databaseContext);
         Objects.requireNonNull(file);
         Objects.requireNonNull(entries);
@@ -44,29 +49,26 @@ public class XmpExporter extends Exporter {
 
         // This is a distinction between writing all entries from the supplied list to a single .xmp file,
         // or write every entry to a separate file.
-        if (file.getFileName().toString().trim().equals(XMP_SPLIT_PATTERN)) {
-
+        if (file.getFileName().toString().trim().equals(XMP_SPLIT_DIRECTORY_INDICATOR)) {
             for (BibEntry entry : entries) {
-                // Avoid situations, where two cite keys are null
+                // Avoid situations, where two citation keys are null
                 Path entryFile;
-                String suffix = entry.getId() + "_" + entry.getCiteKey() + ".xmp";
+                String suffix = entry.getId() + "_" + entry.getField(InternalField.KEY_FIELD).orElse("null") + ".xmp";
                 if (file.getParent() == null) {
-                    entryFile = Paths.get(suffix);
+                    entryFile = Path.of(suffix);
                 } else {
-                    entryFile = Paths.get(file.getParent().toString() + "/" + suffix);
+                    entryFile = Path.of(file.getParent().toString() + "/" + suffix);
                 }
-
-                this.writeBibToXmp(entryFile, Arrays.asList(entry), encoding);
+                this.writeBibToXmp(entryFile, Collections.singletonList(entry));
             }
         } else {
-            this.writeBibToXmp(file, entries, encoding);
+            this.writeBibToXmp(file, entries);
         }
     }
 
-    private void writeBibToXmp(Path file, List<BibEntry> entries, Charset encoding) throws IOException {
+    private void writeBibToXmp(Path file, List<BibEntry> entries) throws IOException {
         String xmpContent = XmpUtilWriter.generateXmpStringWithoutXmpDeclaration(entries, this.xmpPreferences);
-
-        try (BufferedWriter writer = Files.newBufferedWriter(file, encoding)) {
+        try (BufferedWriter writer = Files.newBufferedWriter(file, StandardCharsets.UTF_8)) {
             writer.write(xmpContent);
             writer.flush();
         }
