@@ -1,36 +1,41 @@
 package org.jabref.logic.xmp;
 
 import java.io.ByteArrayInputStream;
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
 
 import org.jabref.model.entry.BibEntry;
+import org.jabref.model.entry.LinkedFile;
+import org.jabref.model.schema.DublinCoreSchemaCustom;
 
+import org.apache.pdfbox.Loader;
 import org.apache.pdfbox.pdmodel.PDDocument;
 import org.apache.pdfbox.pdmodel.PDDocumentCatalog;
 import org.apache.pdfbox.pdmodel.PDDocumentInformation;
 import org.apache.pdfbox.pdmodel.common.PDMetadata;
 import org.apache.xmpbox.XMPMetadata;
 import org.apache.xmpbox.schema.DublinCoreSchema;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class XmpUtilReader {
+
+    private static final Logger LOGGER = LoggerFactory.getLogger(XmpUtilReader.class);
 
     private static final String START_TAG = "<rdf:Description";
     private static final String END_TAG = "</rdf:Description>";
 
     private XmpUtilReader() {
+        // See: https://pdfbox.apache.org/2.0/getting-started.html
+        System.setProperty("sun.java2d.cmm", "sun.java2d.cmm.kcms.KcmsServiceProvider"); // To get higher rendering speed on java 8 oder 9 for images
     }
 
     /**
-     * Will read the XMPMetadata from the given pdf file, closing the file
-     * afterwards.
+     * Will read the XMPMetadata from the given pdf file, closing the file afterwards.
      *
      * @param path The path to read the XMPMetadata from.
      * @return The XMPMetadata object found in the file
@@ -48,7 +53,7 @@ public class XmpUtilReader {
      * @return BibtexEntryies found in the PDF or an empty list
      */
     public static List<BibEntry> readXmp(String filename, XmpPreferences xmpPreferences) throws IOException {
-        return XmpUtilReader.readXmp(Paths.get(filename), xmpPreferences);
+        return XmpUtilReader.readXmp(Path.of(filename), xmpPreferences);
     }
 
     /**
@@ -73,8 +78,7 @@ public class XmpUtilReader {
             if (!xmpMetaList.isEmpty()) {
                 // Only support Dublin Core since JabRef 4.2
                 for (XMPMetadata xmpMeta : xmpMetaList) {
-                    DublinCoreSchema dcSchema = xmpMeta.getDublinCoreSchema();
-
+                    DublinCoreSchema dcSchema = DublinCoreSchemaCustom.copyDublinCoreSchema(xmpMeta.getDublinCoreSchema());
                     if (dcSchema != null) {
                         DublinCoreExtractor dcExtractor = new DublinCoreExtractor(dcSchema, xmpPreferences, new BibEntry());
                         Optional<BibEntry> entry = dcExtractor.extractBibtexEntry();
@@ -94,10 +98,7 @@ public class XmpUtilReader {
             }
         }
 
-        // return empty list, if no metadata was found
-        if (result.isEmpty()) {
-            return Collections.emptyList();
-        }
+        result.forEach(entry -> entry.addFile(new LinkedFile("", path.toAbsolutePath(), "PDF")));
         return result;
     }
 
@@ -108,9 +109,9 @@ public class XmpUtilReader {
      * <p/>
      *
      *
-     * @return empty Optional if no metadata has been found
+     * @return empty List if no metadata has been found, or cannot properly find start or end tag in metadata
      */
-    private static List<XMPMetadata> getXmpMetadata(PDDocument document) throws IOException {
+    private static List<XMPMetadata> getXmpMetadata(PDDocument document) {
         PDDocumentCatalog catalog = document.getDocumentCatalog();
         PDMetadata metaRaw = catalog.getMetadata();
         List<XMPMetadata> metaList = new ArrayList<>();
@@ -124,6 +125,10 @@ public class XmpUtilReader {
         int startDescriptionSection = xmp.indexOf(START_TAG);
         int endDescriptionSection = xmp.lastIndexOf(END_TAG) + END_TAG.length();
 
+        if ((startDescriptionSection < 0) || (startDescriptionSection > endDescriptionSection) || (endDescriptionSection == (END_TAG.length() - 1))) {
+            return metaList;
+        }
+
         // XML header for the xmpDomParser
         String start = xmp.substring(0, startDescriptionSection);
         // descriptionArray - mid part of the textual metadata
@@ -134,7 +139,11 @@ public class XmpUtilReader {
         for (String s : descriptionsArray) {
             // END_TAG is appended, because of the split operation above
             String xmpMetaString = start + s + END_TAG + end;
-            metaList.add(XmpUtilShared.parseXmpMetadata(new ByteArrayInputStream(xmpMetaString.getBytes())));
+            try {
+                metaList.add(XmpUtilShared.parseXmpMetadata(new ByteArrayInputStream(xmpMetaString.getBytes())));
+            } catch (IOException ex) {
+                LOGGER.warn("Problem parsing XMP schema. Continuing with other schemas.", ex);
+            }
         }
         return metaList;
     }
@@ -143,13 +152,12 @@ public class XmpUtilReader {
      * Loads the specified file with the basic pdfbox functionality and uses an empty string as default password.
      *
      * @param path The path to load.
-     * @return
-     * @throws IOException from the underlying {@link PDDocument#load(File)}
+     * @throws IOException from the underlying @link PDDocument#load(File)
      */
     public static PDDocument loadWithAutomaticDecryption(Path path) throws IOException {
         // try to load the document
         // also uses an empty string as default password
-        PDDocument doc = PDDocument.load(path.toFile());
+        PDDocument doc = Loader.loadPDF(path.toFile());
         return doc;
     }
 }
