@@ -3,8 +3,15 @@ package org.jabref.gui.autocompleter;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
+import java.util.Set;
 
+import javafx.collections.FXCollections;
+
+import org.jabref.logic.journals.JournalAbbreviationRepository;
+import org.jabref.model.database.BibDatabase;
 import org.jabref.model.entry.BibEntry;
+import org.jabref.model.entry.field.StandardField;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -12,153 +19,166 @@ import org.junit.jupiter.api.Test;
 import static org.jabref.gui.autocompleter.AutoCompleterUtil.getRequest;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
-public class FieldValueSuggestionProviderTest {
+class FieldValueSuggestionProviderTest {
 
     private FieldValueSuggestionProvider autoCompleter;
+    private BibDatabase database;
 
     @BeforeEach
-    public void setUp() throws Exception {
-        autoCompleter = new FieldValueSuggestionProvider("field");
+    void setUp() {
+        database = new BibDatabase();
+        autoCompleter = new FieldValueSuggestionProvider(StandardField.TITLE, database);
     }
 
     @Test
-    public void initAutoCompleterWithNullFieldThrowsException() {
-        assertThrows(NullPointerException.class, () -> new FieldValueSuggestionProvider(null));
+    void initAutoCompleterWithNullFieldThrowsException() {
+        assertThrows(NullPointerException.class, () -> new FieldValueSuggestionProvider(null, new BibDatabase()));
     }
 
     @Test
-    public void completeWithoutAddingAnythingReturnsNothing() {
-        Collection<String> result = autoCompleter.call(getRequest(("test")));
+    void completeWithoutAddingAnythingReturnsNothing() {
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("test")));
         assertEquals(Collections.emptyList(), result);
     }
 
     @Test
-    public void completeAfterAddingNullReturnsNothing() {
-        autoCompleter.indexEntry(null);
+    void completeAfterAddingEmptyEntryReturnsNothing() {
+        BibEntry entry = new BibEntry();
+        database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.call(getRequest(("test")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("test")));
         assertEquals(Collections.emptyList(), result);
     }
 
     @Test
-    public void completeAfterAddingEmptyEntryReturnsNothing() {
+    void completeAfterAddingEntryWithoutFieldReturnsNothing() {
         BibEntry entry = new BibEntry();
-        autoCompleter.indexEntry(entry);
+        entry.setField(StandardField.AUTHOR, "testAuthor");
+        database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.call(getRequest(("test")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("test")));
         assertEquals(Collections.emptyList(), result);
     }
 
     @Test
-    public void completeAfterAddingEntryWithoutFieldReturnsNothing() {
-        BibEntry entry = new BibEntry();
-        entry.setField("title", "testTitle");
-        autoCompleter.indexEntry(entry);
+    void completeOnIgnoredFieldReturnsNothing() {
+        AutoCompletePreferences autoCompletePreferences = mock(AutoCompletePreferences.class);
+        JournalAbbreviationRepository journalAbbreviationRepository = mock(JournalAbbreviationRepository.class);
+        when(autoCompletePreferences.getCompleteFields()).thenReturn(FXCollections.observableSet(Set.of(StandardField.AUTHOR)));
+        SuggestionProviders suggestionProviders = new SuggestionProviders(database, journalAbbreviationRepository, autoCompletePreferences);
 
-        Collection<String> result = autoCompleter.call(getRequest(("test")));
+        SuggestionProvider<String> autoCompleter = (SuggestionProvider<String>) suggestionProviders.getForField(StandardField.TITLE);
+
+        BibEntry entry = new BibEntry();
+        entry.setField(StandardField.TITLE, "testValue");
+        database.insertEntry(entry);
+
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("testValue")));
         assertEquals(Collections.emptyList(), result);
     }
 
     @Test
-    public void completeValueReturnsValue() {
+    void completeValueReturnsValue() {
         BibEntry entry = new BibEntry();
-        entry.setField("field", "testValue");
-        autoCompleter.indexEntry(entry);
+        entry.setField(StandardField.TITLE, "testValue");
+        database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.call(getRequest(("testValue")));
-        assertEquals(Arrays.asList("testValue"), result);
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("testValue")));
+        assertEquals(List.of("testValue"), result);
     }
 
     @Test
-    public void completeBeginnigOfValueReturnsValue() {
+    void completeBeginnigOfValueReturnsValue() {
         BibEntry entry = new BibEntry();
-        entry.setField("field", "testValue");
-        autoCompleter.indexEntry(entry);
+        entry.setField(StandardField.TITLE, "testValue");
+        database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.call(getRequest(("test")));
-        assertEquals(Arrays.asList("testValue"), result);
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("test")));
+        assertEquals(List.of("testValue"), result);
     }
 
     @Test
-    public void completeLowercaseValueReturnsValue() {
+    void completeLowercaseValueReturnsValue() {
         BibEntry entry = new BibEntry();
-        entry.setField("field", "testValue");
-        autoCompleter.indexEntry(entry);
+        entry.setField(StandardField.TITLE, "testValue");
+        database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.call(getRequest(("testvalue")));
-        assertEquals(Arrays.asList("testValue"), result);
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("testvalue")));
+        assertEquals(List.of("testValue"), result);
     }
 
     @Test
-    public void completeNullThrowsException() {
+    void completeNullThrowsException() {
         BibEntry entry = new BibEntry();
-        entry.setField("field", "testKey");
-        autoCompleter.indexEntry(entry);
+        entry.setField(StandardField.TITLE, "testKey");
+        database.insertEntry(entry);
 
-        assertThrows(NullPointerException.class, () -> autoCompleter.call(getRequest(null)));
+        assertThrows(NullPointerException.class, () -> autoCompleter.provideSuggestions(getRequest(null)));
     }
 
     @Test
-    public void completeEmptyStringReturnsNothing() {
+    void completeEmptyStringReturnsNothing() {
         BibEntry entry = new BibEntry();
-        entry.setField("field", "testKey");
-        autoCompleter.indexEntry(entry);
+        entry.setField(StandardField.TITLE, "testKey");
+        database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.call(getRequest(("")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("")));
         assertEquals(Collections.emptyList(), result);
     }
 
     @Test
-    public void completeReturnsMultipleResults() {
+    void completeReturnsMultipleResults() {
         BibEntry entryOne = new BibEntry();
-        entryOne.setField("field", "testValueOne");
-        autoCompleter.indexEntry(entryOne);
+        entryOne.setField(StandardField.TITLE, "testValueOne");
+        database.insertEntry(entryOne);
         BibEntry entryTwo = new BibEntry();
-        entryTwo.setField("field", "testValueTwo");
-        autoCompleter.indexEntry(entryTwo);
+        entryTwo.setField(StandardField.TITLE, "testValueTwo");
+        database.insertEntry(entryTwo);
 
-        Collection<String> result = autoCompleter.call(getRequest(("testValue")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("testValue")));
         assertEquals(Arrays.asList("testValueOne", "testValueTwo"), result);
     }
 
     @Test
-    public void completeShortStringReturnsFieldValue() {
+    void completeShortStringReturnsFieldValue() {
         BibEntry entry = new BibEntry();
-        entry.setField("field", "val");
-        autoCompleter.indexEntry(entry);
+        entry.setField(StandardField.TITLE, "val");
+        database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.call(getRequest(("va")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("va")));
         assertEquals(Collections.singletonList("val"), result);
     }
 
     @Test
-    public void completeBeginnigOfSecondWordReturnsWholeFieldValue() {
+    void completeBeginnigOfSecondWordReturnsWholeFieldValue() {
         BibEntry entry = new BibEntry();
-        entry.setField("field", "test value");
-        autoCompleter.indexEntry(entry);
+        entry.setField(StandardField.TITLE, "test value");
+        database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.call(getRequest(("val")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("val")));
         assertEquals(Collections.singletonList("test value"), result);
     }
 
     @Test
-    public void completePartOfWordReturnsWholeFieldValue() {
+    void completePartOfWordReturnsWholeFieldValue() {
         BibEntry entry = new BibEntry();
-        entry.setField("field", "test value");
-        autoCompleter.indexEntry(entry);
+        entry.setField(StandardField.TITLE, "test value");
+        database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.call(getRequest(("lue")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("lue")));
         assertEquals(Collections.singletonList("test value"), result);
     }
 
     @Test
-    public void completeReturnsWholeFieldValue() {
+    void completeReturnsWholeFieldValue() {
         BibEntry entry = new BibEntry();
-        entry.setField("field", "test value");
-        autoCompleter.indexEntry(entry);
+        entry.setField(StandardField.TITLE, "test value");
+        database.insertEntry(entry);
 
-        Collection<String> result = autoCompleter.call(getRequest(("te")));
+        Collection<String> result = autoCompleter.provideSuggestions(getRequest(("te")));
         assertEquals(Collections.singletonList("test value"), result);
     }
 }
