@@ -6,15 +6,14 @@ import java.io.InputStreamReader;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.List;
 import java.util.Optional;
 
 import org.jabref.logic.importer.ImportFormatPreferences;
 import org.jabref.logic.importer.ParserResult;
 import org.jabref.logic.importer.fileformat.BibtexParser;
-import org.jabref.model.auxparser.AuxParser;
-import org.jabref.model.auxparser.AuxParserResult;
 import org.jabref.model.database.BibDatabase;
+import org.jabref.model.entry.BibEntry;
 import org.jabref.model.util.DummyFileUpdateMonitor;
 
 import org.junit.jupiter.api.AfterEach;
@@ -22,28 +21,28 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Answers;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 
-public class AuxParserTest {
+class AuxParserTest {
     private ImportFormatPreferences importFormatPreferences;
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         importFormatPreferences = mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS);
     }
 
     @AfterEach
-    public void tearDown() {
+    void tearDown() {
         importFormatPreferences = null;
     }
 
     @Test
-    public void testNormal() throws URISyntaxException, IOException {
+    void testNormal() throws URISyntaxException, IOException {
         InputStream originalStream = AuxParserTest.class.getResourceAsStream("origin.bib");
-        Path auxFile = Paths.get(AuxParserTest.class.getResource("paper.aux").toURI());
+        Path auxFile = Path.of(AuxParserTest.class.getResource("paper.aux").toURI());
         try (InputStreamReader originalReader = new InputStreamReader(originalStream, StandardCharsets.UTF_8)) {
             ParserResult result = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor()).parse(originalReader);
 
@@ -53,7 +52,10 @@ public class AuxParserTest {
             assertTrue(auxResult.getGeneratedBibDatabase().hasEntries());
             assertEquals(0, auxResult.getUnresolvedKeysCount());
             BibDatabase newDB = auxResult.getGeneratedBibDatabase();
-            assertEquals(2, newDB.getEntries().size());
+            List<BibEntry> newEntries = newDB.getEntries();
+            assertEquals(2, newEntries.size());
+            assertTrue(newEntries.get(0).hasChanged());
+            assertTrue(newEntries.get(1).hasChanged());
             assertEquals(2, auxResult.getResolvedKeysCount());
             assertEquals(2, auxResult.getFoundKeysInAux());
             assertEquals(auxResult.getFoundKeysInAux() + auxResult.getCrossRefEntriesCount(),
@@ -63,9 +65,36 @@ public class AuxParserTest {
     }
 
     @Test
-    public void testNotAllFound() throws URISyntaxException, IOException {
+    void testTwoArgMacro() throws URISyntaxException, IOException {
+        // Result should be identical to that of testNormal
+
         InputStream originalStream = AuxParserTest.class.getResourceAsStream("origin.bib");
-        Path auxFile = Paths.get(AuxParserTest.class.getResource("badpaper.aux").toURI());
+        Path auxFile = Path.of(AuxParserTest.class.getResource("papertwoargmacro.aux").toURI());
+        try (InputStreamReader originalReader = new InputStreamReader(originalStream, StandardCharsets.UTF_8)) {
+            ParserResult result = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor()).parse(originalReader);
+
+            AuxParser auxParser = new DefaultAuxParser(result.getDatabase());
+            AuxParserResult auxResult = auxParser.parse(auxFile);
+
+            assertTrue(auxResult.getGeneratedBibDatabase().hasEntries());
+            assertEquals(0, auxResult.getUnresolvedKeysCount());
+            BibDatabase newDB = auxResult.getGeneratedBibDatabase();
+            List<BibEntry> newEntries = newDB.getEntries();
+            assertEquals(2, newEntries.size());
+            assertTrue(newEntries.get(0).hasChanged());
+            assertTrue(newEntries.get(1).hasChanged());
+            assertEquals(2, auxResult.getResolvedKeysCount());
+            assertEquals(2, auxResult.getFoundKeysInAux());
+            assertEquals(auxResult.getFoundKeysInAux() + auxResult.getCrossRefEntriesCount(),
+                    auxResult.getResolvedKeysCount() + auxResult.getUnresolvedKeysCount());
+            assertEquals(0, auxResult.getCrossRefEntriesCount());
+        }
+    }
+
+    @Test
+    void testNotAllFound() throws URISyntaxException, IOException {
+        InputStream originalStream = AuxParserTest.class.getResourceAsStream("origin.bib");
+        Path auxFile = Path.of(AuxParserTest.class.getResource("badpaper.aux").toURI());
         try (InputStreamReader originalReader = new InputStreamReader(originalStream, StandardCharsets.UTF_8)) {
             ParserResult result = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor()).parse(originalReader);
 
@@ -85,9 +114,9 @@ public class AuxParserTest {
     }
 
     @Test
-    public void duplicateBibDatabaseConfiguration() throws URISyntaxException, IOException {
+    void duplicateBibDatabaseConfiguration() throws URISyntaxException, IOException {
         InputStream originalStream = AuxParserTest.class.getResourceAsStream("config.bib");
-        Path auxFile = Paths.get(AuxParserTest.class.getResource("paper.aux").toURI());
+        Path auxFile = Path.of(AuxParserTest.class.getResource("paper.aux").toURI());
         try (InputStreamReader originalReader = new InputStreamReader(originalStream, StandardCharsets.UTF_8)) {
             ParserResult result = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor()).parse(originalReader);
 
@@ -101,9 +130,9 @@ public class AuxParserTest {
     }
 
     @Test
-    public void testNestedAux() throws URISyntaxException, IOException {
+    void testNestedAux() throws URISyntaxException, IOException {
         InputStream originalStream = AuxParserTest.class.getResourceAsStream("origin.bib");
-        Path auxFile = Paths.get(AuxParserTest.class.getResource("nested.aux").toURI());
+        Path auxFile = Path.of(AuxParserTest.class.getResource("nested.aux").toURI());
         try (InputStreamReader originalReader = new InputStreamReader(originalStream, StandardCharsets.UTF_8)) {
             ParserResult result = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor()).parse(originalReader);
 
@@ -123,9 +152,9 @@ public class AuxParserTest {
     }
 
     @Test
-    public void testCrossRef() throws URISyntaxException, IOException {
+    void testCrossRef() throws URISyntaxException, IOException {
         InputStream originalStream = AuxParserTest.class.getResourceAsStream("origin.bib");
-        Path auxFile = Paths.get(AuxParserTest.class.getResource("crossref.aux").toURI());
+        Path auxFile = Path.of(AuxParserTest.class.getResource("crossref.aux").toURI());
         try (InputStreamReader originalReader = new InputStreamReader(originalStream, StandardCharsets.UTF_8)) {
             ParserResult result = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor()).parse(originalReader);
 
@@ -145,9 +174,9 @@ public class AuxParserTest {
     }
 
     @Test
-    public void testFileNotFound() {
+    void testFileNotFound() {
         AuxParser auxParser = new DefaultAuxParser(new BibDatabase());
-        AuxParserResult auxResult = auxParser.parse(Paths.get("unknownfile.aux"));
+        AuxParserResult auxResult = auxParser.parse(Path.of("unknownfile.aux"));
 
         assertFalse(auxResult.getGeneratedBibDatabase().hasEntries());
         assertEquals(0, auxResult.getUnresolvedKeysCount());
