@@ -8,7 +8,6 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.List;
 
@@ -19,11 +18,10 @@ import org.jabref.logic.importer.fileformat.BibtexParser;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.util.DummyFileUpdateMonitor;
 
-import static org.junit.jupiter.api.Assertions.*;
-
 import org.junit.jupiter.api.Assertions;
 import org.mockito.Answers;
 
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.mock;
 
 public class BibEntryAssert {
@@ -32,9 +30,9 @@ public class BibEntryAssert {
      * Reads a single entry from the resource using `getResourceAsStream` from the given class. The resource has to
      * contain a single entry
      *
-     * @param clazz the class where to call `getResourceAsStream`
+     * @param clazz        the class where to call `getResourceAsStream`
      * @param resourceName the resource to read
-     * @param entry the entry to compare with
+     * @param entry        the entry to compare with
      */
     public static void assertEquals(Class<?> clazz, String resourceName, BibEntry entry)
             throws IOException {
@@ -50,9 +48,9 @@ public class BibEntryAssert {
      * Reads a single entry from the resource using `getResourceAsStream` from the given class. The resource has to
      * contain a single entry
      *
-     * @param clazz the class where to call `getResourceAsStream`
+     * @param clazz        the class where to call `getResourceAsStream`
      * @param resourceName the resource to read
-     * @param asIsEntries a list containing a single entry to compare with
+     * @param asIsEntries  a list containing a single entry to compare with
      */
     public static void assertEquals(Class<?> clazz, String resourceName, List<BibEntry> asIsEntries)
             throws IOException {
@@ -71,7 +69,8 @@ public class BibEntryAssert {
             result = parser.parse(reader);
         }
         assertNotNull(result);
-        assertFalse(result.isEmpty());
+        assertNotNull(result.getDatabase());
+        assertNotNull(result.getDatabase().getEntries());
         return result.getDatabase().getEntries();
     }
 
@@ -79,7 +78,7 @@ public class BibEntryAssert {
      * Reads a bibtex database from the given InputStream. The list is compared with the given list.
      *
      * @param expectedInputStream the inputStream reading the entry from
-     * @param actualEntries a list containing a single entry to compare with
+     * @param actualEntries       a list containing a single entry to compare with
      */
     public static void assertEquals(InputStream expectedInputStream, List<BibEntry> actualEntries)
             throws IOException {
@@ -102,7 +101,7 @@ public class BibEntryAssert {
      * compared to the given entry
      *
      * @param expected the inputStream reading the entry from
-     * @param actual the entry to compare with
+     * @param actual   the entry to compare with
      */
     public static void assertEquals(InputStream expected, BibEntry actual)
             throws IOException {
@@ -110,11 +109,13 @@ public class BibEntryAssert {
     }
 
     /**
-     * Compares two InputStreams. For each InputStream a list will be created. expectedIs is read directly, actualIs is filtered through importer to convert to a list of BibEntries.
-     * @param expectedIs A BibtexImporter InputStream.
+     * Compares two InputStreams. For each InputStream a list will be created. expectedIs is read directly, actualIs is
+     * filtered through importer to convert to a list of BibEntries.
+     *
+     * @param expectedIs   A BibtexImporter InputStream.
      * @param fileToImport The path to the file to be imported.
-     * @param importer The fileformat you want to use to read the passed file to get the list of expected BibEntries
-     * @throws IOException
+     * @param importer     The fileformat you want to use to read the passed file to get the list of expected
+     *                     BibEntries
      */
     public static void assertEquals(InputStream expectedIs, Path fileToImport, Importer importer)
             throws IOException {
@@ -123,26 +124,28 @@ public class BibEntryAssert {
 
     public static void assertEquals(InputStream expectedIs, URL fileToImport, Importer importer)
             throws URISyntaxException, IOException {
-        assertEquals(expectedIs, Paths.get(fileToImport.toURI()), importer);
+        assertEquals(expectedIs, Path.of(fileToImport.toURI()), importer);
     }
 
     /**
-     * Compares a list of BibEntries to an InputStream. actualIs is filtered through importerForActualIs to convert to a list of BibEntries.
-     * @param expected A BibtexImporter InputStream.
+     * Compares a list of BibEntries to an InputStream. actualIs is filtered through importerForActualIs to convert to a
+     * list of BibEntries.
+     *
+     * @param expected     A BibtexImporter InputStream.
      * @param fileToImport The path to the file to be imported.
-     * @param importer The fileformat you want to use to read the passed file to get the list of expected BibEntries
-     * @throws IOException
+     * @param importer     The fileformat you want to use to read the passed file to get the list of expected
+     *                     BibEntries
      */
     public static void assertEquals(List<BibEntry> expected, Path fileToImport, Importer importer)
             throws IOException {
-        List<BibEntry> actualEntries = importer.importDatabase(fileToImport, StandardCharsets.UTF_8)
-                .getDatabase().getEntries();
+        List<BibEntry> actualEntries = importer.importDatabase(fileToImport)
+                                               .getDatabase().getEntries();
         // explicit reference of Assertions is needed here to disambiguate from the methods defined by this class
         Assertions.assertEquals(expected, actualEntries);
     }
 
     public static void assertEquals(List<BibEntry> expected, URL fileToImport, Importer importer)
             throws URISyntaxException, IOException {
-        assertEquals(expected, Paths.get(fileToImport.toURI()), importer);
+        assertEquals(expected, Path.of(fileToImport.toURI()), importer);
     }
 }
