@@ -3,9 +3,7 @@ package org.jabref.logic.importer.fileformat;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URISyntaxException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -15,6 +13,9 @@ import java.util.stream.Stream;
 import org.jabref.logic.bibtex.BibEntryAssert;
 import org.jabref.logic.util.StandardFileType;
 import org.jabref.model.entry.BibEntry;
+import org.jabref.model.entry.field.StandardField;
+import org.jabref.model.entry.field.UnknownField;
+import org.jabref.model.entry.types.StandardEntryType;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -26,9 +27,8 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 public class OvidImporterTest {
 
-    private OvidImporter importer;
-
     private static final String FILE_ENDING = ".txt";
+    private OvidImporter importer;
 
     private static Stream<String> fileNames() throws IOException {
         Predicate<String> fileName = name -> name.startsWith("OvidImporterTest")
@@ -81,68 +81,68 @@ public class OvidImporterTest {
 
     @Test
     public void testImportEmpty() throws IOException, URISyntaxException {
-        Path file = Paths.get(OvidImporter.class.getResource("Empty.txt").toURI());
-        List<BibEntry> entries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
+        Path file = Path.of(OvidImporter.class.getResource("Empty.txt").toURI());
+        List<BibEntry> entries = importer.importDatabase(file).getDatabase().getEntries();
         assertEquals(Collections.emptyList(), entries);
     }
 
     @Test
     public void testImportEntries1() throws IOException, URISyntaxException {
-        Path file = Paths.get(OvidImporter.class.getResource("OvidImporterTest1.txt").toURI());
-        List<BibEntry> entries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
+        Path file = Path.of(OvidImporter.class.getResource("OvidImporterTest1.txt").toURI());
+        List<BibEntry> entries = importer.importDatabase(file).getDatabase().getEntries();
         assertEquals(5, entries.size());
 
         BibEntry entry = entries.get(0);
-        assertEquals("misc", entry.getType());
-        assertEquals(Optional.of("Mustermann and Musterfrau"), entry.getField("author"));
-        assertEquals(Optional.of("Short abstract"), entry.getField("abstract"));
-        assertEquals(Optional.of("Musterbuch"), entry.getField("title"));
-        assertEquals(Optional.of("Einleitung"), entry.getField("chaptertitle"));
+        assertEquals(StandardEntryType.Misc, entry.getType());
+        assertEquals(Optional.of("Mustermann and Musterfrau"), entry.getField(StandardField.AUTHOR));
+        assertEquals(Optional.of("Short abstract"), entry.getField(StandardField.ABSTRACT));
+        assertEquals(Optional.of("Musterbuch"), entry.getField(StandardField.TITLE));
+        assertEquals(Optional.of("Einleitung"), entry.getField(new UnknownField("chaptertitle")));
 
         entry = entries.get(1);
-        assertEquals("inproceedings", entry.getType());
-        assertEquals(Optional.of("Max"), entry.getField("editor"));
-        assertEquals(Optional.of("Max the Editor"), entry.getField("title"));
-        assertEquals(Optional.of("Very Long Title"), entry.getField("journal"));
-        assertEquals(Optional.of("28"), entry.getField("volume"));
-        assertEquals(Optional.of("2"), entry.getField("issue"));
-        assertEquals(Optional.of("2015"), entry.getField("year"));
-        assertEquals(Optional.of("103--106"), entry.getField("pages"));
+        assertEquals(StandardEntryType.InProceedings, entry.getType());
+        assertEquals(Optional.of("Max"), entry.getField(StandardField.EDITOR));
+        assertEquals(Optional.of("Max the Editor"), entry.getField(StandardField.TITLE));
+        assertEquals(Optional.of("Very Long Title"), entry.getField(StandardField.JOURNAL));
+        assertEquals(Optional.of("28"), entry.getField(StandardField.VOLUME));
+        assertEquals(Optional.of("2"), entry.getField(StandardField.ISSUE));
+        assertEquals(Optional.of("2015"), entry.getField(StandardField.YEAR));
+        assertEquals(Optional.of("103--106"), entry.getField(StandardField.PAGES));
 
         entry = entries.get(2);
-        assertEquals("incollection", entry.getType());
-        assertEquals(Optional.of("Max"), entry.getField("author"));
-        assertEquals(Optional.of("Test"), entry.getField("title"));
-        assertEquals(Optional.of("Very Long Title"), entry.getField("journal"));
-        assertEquals(Optional.of("28"), entry.getField("volume"));
-        assertEquals(Optional.of("2"), entry.getField("issue"));
-        assertEquals(Optional.of("April"), entry.getField("month"));
-        assertEquals(Optional.of("2015"), entry.getField("year"));
-        assertEquals(Optional.of("103--106"), entry.getField("pages"));
+        assertEquals(StandardEntryType.InCollection, entry.getType());
+        assertEquals(Optional.of("Max"), entry.getField(StandardField.AUTHOR));
+        assertEquals(Optional.of("Test"), entry.getField(StandardField.TITLE));
+        assertEquals(Optional.of("Very Long Title"), entry.getField(StandardField.JOURNAL));
+        assertEquals(Optional.of("28"), entry.getField(StandardField.VOLUME));
+        assertEquals(Optional.of("2"), entry.getField(StandardField.ISSUE));
+        assertEquals(Optional.of("April"), entry.getField(StandardField.MONTH));
+        assertEquals(Optional.of("2015"), entry.getField(StandardField.YEAR));
+        assertEquals(Optional.of("103--106"), entry.getField(StandardField.PAGES));
 
         entry = entries.get(3);
-        assertEquals("book", entry.getType());
-        assertEquals(Optional.of("Max"), entry.getField("author"));
-        assertEquals(Optional.of("2015"), entry.getField("year"));
-        assertEquals(Optional.of("Editor"), entry.getField("editor"));
-        assertEquals(Optional.of("Very Long Title"), entry.getField("booktitle"));
-        assertEquals(Optional.of("103--106"), entry.getField("pages"));
-        assertEquals(Optional.of("Address"), entry.getField("address"));
-        assertEquals(Optional.of("Publisher"), entry.getField("publisher"));
+        assertEquals(StandardEntryType.Book, entry.getType());
+        assertEquals(Optional.of("Max"), entry.getField(StandardField.AUTHOR));
+        assertEquals(Optional.of("2015"), entry.getField(StandardField.YEAR));
+        assertEquals(Optional.of("Editor"), entry.getField(StandardField.EDITOR));
+        assertEquals(Optional.of("Very Long Title"), entry.getField(StandardField.BOOKTITLE));
+        assertEquals(Optional.of("103--106"), entry.getField(StandardField.PAGES));
+        assertEquals(Optional.of("Address"), entry.getField(StandardField.ADDRESS));
+        assertEquals(Optional.of("Publisher"), entry.getField(StandardField.PUBLISHER));
 
         entry = entries.get(4);
-        assertEquals("article", entry.getType());
-        assertEquals(Optional.of("2014"), entry.getField("year"));
-        assertEquals(Optional.of("58"), entry.getField("pages"));
-        assertEquals(Optional.of("Test"), entry.getField("address"));
-        assertEquals(Optional.empty(), entry.getField("title"));
-        assertEquals(Optional.of("TestPublisher"), entry.getField("publisher"));
+        assertEquals(StandardEntryType.Article, entry.getType());
+        assertEquals(Optional.of("2014"), entry.getField(StandardField.YEAR));
+        assertEquals(Optional.of("58"), entry.getField(StandardField.PAGES));
+        assertEquals(Optional.of("Test"), entry.getField(StandardField.ADDRESS));
+        assertEquals(Optional.empty(), entry.getField(StandardField.TITLE));
+        assertEquals(Optional.of("TestPublisher"), entry.getField(StandardField.PUBLISHER));
     }
 
     @Test
     public void testImportEntries2() throws IOException, URISyntaxException {
-        Path file = Paths.get(OvidImporter.class.getResource("OvidImporterTest2Invalid.txt").toURI());
-        List<BibEntry> entries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
+        Path file = Path.of(OvidImporter.class.getResource("OvidImporterTest2Invalid.txt").toURI());
+        List<BibEntry> entries = importer.importDatabase(file).getDatabase().getEntries();
         assertEquals(Collections.emptyList(), entries);
     }
 
@@ -150,10 +150,10 @@ public class OvidImporterTest {
     public void testImportSingleEntries() throws IOException, URISyntaxException {
 
         for (int n = 3; n <= 7; n++) {
-            Path file = Paths.get(OvidImporter.class.getResource("OvidImporterTest" + n + ".txt").toURI());
+            Path file = Path.of(OvidImporter.class.getResource("OvidImporterTest" + n + ".txt").toURI());
             try (InputStream nis = OvidImporter.class.getResourceAsStream("OvidImporterTestBib" + n + ".bib")) {
-                List<BibEntry> entries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase()
-                        .getEntries();
+                List<BibEntry> entries = importer.importDatabase(file).getDatabase()
+                                                 .getEntries();
                 assertNotNull(entries);
                 assertEquals(1, entries.size());
                 BibEntryAssert.assertEquals(nis, entries.get(0));
