@@ -1,16 +1,15 @@
 package org.jabref.logic.pdf;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.entry.BibEntry;
-import org.jabref.model.entry.FieldName;
-import org.jabref.model.metadata.FileDirectoryPreferences;
+import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.pdf.FileAnnotation;
+import org.jabref.preferences.FilePreferences;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -23,23 +22,24 @@ import static org.mockito.Mockito.when;
 public class EntryAnnotationImporterTest {
 
     private final BibDatabaseContext databaseContext = mock(BibDatabaseContext.class);
-    private final BibEntry entry = new BibEntry("EntryKey");
+    private BibEntry entry;
 
     @BeforeEach
     public void setUp() {
-        when(databaseContext.getFileDirectoriesAsPaths(any())).thenReturn(Collections.singletonList(Paths.get("src/test/resources/pdfs/")));
+        entry = new BibEntry();
+        when(databaseContext.getFileDirectories(any())).thenReturn(Collections.singletonList(Path.of("src/test/resources/pdfs/")));
     }
 
     @Test
     public void readEntryExampleThesis() {
-        //given
-        entry.setField(FieldName.FILE, ":thesis-example.pdf:PDF");
+        // given
+        entry.setField(StandardField.FILE, ":thesis-example.pdf:PDF");
         EntryAnnotationImporter entryAnnotationImporter = new EntryAnnotationImporter(entry);
 
-        //when
-        Map<Path, List<FileAnnotation>> annotations = entryAnnotationImporter.importAnnotationsFromFiles(databaseContext, mock(FileDirectoryPreferences.class));
+        // when
+        Map<Path, List<FileAnnotation>> annotations = entryAnnotationImporter.importAnnotationsFromFiles(databaseContext, mock(FilePreferences.class));
 
-        //then
+        // then
         int fileCounter = 0;
         int annotationCounter = 0;
         for (List<FileAnnotation> annotationsOfFile : annotations.values()) {
